// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordDetailsScreen test suite example record with compiled photo 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 2,
            "borderWidth": 1,
            "margin": 2,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "lightblue",
              "borderBottomWidth": 1,
              "borderColor": "black",
            }
          }
        >
          <Text
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            Data Sheet
          </Text>
        </View>
        <Text>
          Date: 2022-04-01
        </Text>
        <Text>
          Type: Sample
        </Text>
        <Text>
          Name: Helpful Individual
        </Text>
        <Text>
          Organization: Community Scientist
        </Text>
        <Text>
          Coordinates: 48.06727, -121.12165
        </Text>
        <Text>
          Tube Id: TUBE-1234
        </Text>
        <Text>
          Size: Fist
        </Text>
        <Text>
          Colors: Red, Pink
        </Text>
        <Text>
          Location Description: White Chuck Glacier, Glacier Peak Wilderness, WA
        </Text>
        <Text>
          Notes: Dark red algae in runnels
        </Text>
      </View>
      <Image
        dataSet={Object {}}
        onError={[Function]}
        source={1}
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;

exports[`RecordDetailsScreen test suite sample with remote photos 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 2,
            "borderWidth": 1,
            "margin": 2,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "lightblue",
              "borderBottomWidth": 1,
              "borderColor": "black",
            }
          }
        >
          <Text
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            Data Sheet
          </Text>
        </View>
        <Text>
          Date: 2021-09-16
        </Text>
        <Text>
          Type: Sample
        </Text>
        <Text>
          Name: test name
        </Text>
        <Text>
          Organization: test org
        </Text>
        <Text>
          Coordinates: -123.456, 96.96
        </Text>
        <Text>
          Tube Id: LAB-1337
        </Text>
        <Text>
          Size: Fist
        </Text>
        <Text>
          Colors: Red, Green
        </Text>
        <Text>
          Location Description: test location
        </Text>
        <Text>
          Notes: test notes
        </Text>
      </View>
      <Text>
        Loading
      </Text>
      <ActivityIndicator
        color="lightgrey"
        size="large"
        style={
          Object {
            "paddingTop": 5,
          }
        }
      />
      <Image
        accessibilityLabel="some alt text here"
        alt="some alt text here"
        dataSet={Object {}}
        onError={[Function]}
        source={
          Object {
            "uri": "data:image/jpg;base64,undefined",
          }
        }
        style={
          Object {
            "height": 1013,
            "maxWidth": "100%",
            "width": 750,
          }
        }
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;

exports[`RecordDetailsScreen test suite sample with remote photos, offline mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 2,
            "borderWidth": 1,
            "margin": 2,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "lightblue",
              "borderBottomWidth": 1,
              "borderColor": "black",
            }
          }
        >
          <Text
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            Data Sheet
          </Text>
        </View>
        <Text>
          Date: 2021-09-16
        </Text>
        <Text>
          Type: Sample
        </Text>
        <Text>
          Name: test name
        </Text>
        <Text>
          Organization: test org
        </Text>
        <Text>
          Coordinates: -123.456, 96.96
        </Text>
        <Text>
          Tube Id: LAB-1337
        </Text>
        <Text>
          Size: Fist
        </Text>
        <Text>
          Colors: Red, Green
        </Text>
        <Text>
          Location Description: test location
        </Text>
        <Text>
          Notes: test notes
        </Text>
      </View>
      <Text>
        Offline
      </Text>
      <Text />
      <Image
        accessibilityLabel="some alt text here"
        alt="some alt text here"
        dataSet={Object {}}
        onError={[Function]}
        source={
          Object {
            "uri": "data:image/jpg;base64,undefined",
          }
        }
        style={
          Object {
            "height": 1013,
            "maxWidth": "100%",
            "width": 750,
          }
        }
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;

exports[`RecordDetailsScreen test suite sample with remote photos, photo download fails 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 2,
            "borderWidth": 1,
            "margin": 2,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "lightblue",
              "borderBottomWidth": 1,
              "borderColor": "black",
            }
          }
        >
          <Text
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            Data Sheet
          </Text>
        </View>
        <Text>
          Date: 2021-09-16
        </Text>
        <Text>
          Type: Sample
        </Text>
        <Text>
          Name: test name
        </Text>
        <Text>
          Organization: test org
        </Text>
        <Text>
          Coordinates: -123.456, 96.96
        </Text>
        <Text>
          Tube Id: LAB-1337
        </Text>
        <Text>
          Size: Fist
        </Text>
        <Text>
          Colors: Red, Green
        </Text>
        <Text>
          Location Description: test location
        </Text>
        <Text>
          Notes: test notes
        </Text>
      </View>
      <Text>
        Error
      </Text>
      <Text />
      <Image
        accessibilityLabel="some alt text here"
        alt="some alt text here"
        dataSet={Object {}}
        onError={[Function]}
        source={
          Object {
            "uri": "data:image/jpg;base64,undefined",
          }
        }
        style={
          Object {
            "height": 1013,
            "maxWidth": "100%",
            "width": 750,
          }
        }
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;
